--- a/index.html
+++ b/index.html
@@ -69,11 +69,7 @@
                         <span>Business Analyst</span>
                     </span>
                 </div>
-                <p data-aos="flip-up" data-aos-duration="1000" data-aos-delay="900">I am passionate about information
-                    technology and possess a solid foundation in programming. In the future, I aspire to explore various
-                    roles within the tech industry to broaden my experience and develop my skills. Driven by a spirit of
-                    innovation and a strong desire for continuous learning, I actively seek opportunities to enhance my
-                    abilities and achieve my goals in this dynamic field. </p>
+                <p data-aos="flip-up" data-aos-duration="1000" data-aos-delay="900">With an ardent passion for information technology, I have cultivated a robust foundation in programming, specializing in backend development. My curiosity and zeal for knowledge propel me to explore diverse roles within the tech realm, each an opportunity to refine my craft. Committed to perpetual growth and innovation, I aspire to evolve into a skilled Business Analyst and Backend Developer, embracing challenges and weaving my contributions into the ever-evolving tapestry of technology. </p>
                 <div class="social-links" data-aos="flip-down" data-aos-duration="1000" data-aos-delay="1000">
                     <a href="https://github.com/hongphuc0987" target="_blank"><i
                             class="fa-brands fa-square-github"></i></a>
